# OVIA

./: .gitmodules  README.md
Projects/: CMakeLists.txt  OVIA.sln  OVIA.vcxproj  OVIA.vcxproj.filters
Projects/OVIA.xcodeproj/: project.pbxproj
Projects/OVIA_Library.xcodeproj/: project.pbxproj
Resources/: OVIA.pc.in  OVIA.rc.in
